--- a/stylesheets/super-hammer.scss
+++ b/stylesheets/super-hammer.scss
@@ -11,9 +11,6 @@ $media-queries-supported : true;
 
 // Opacity support in IE required via the proprietry ActiveX?
 $ie8-opacity-supported 	 : false;
-
-// Show current device (blue) and logical (green) breakpoints on the bottom
-$show-breakpoint         : false;
  
 // Import all SASS imports
 @import 'imports';
